Cambio de lugar del botón

--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -11,7 +11,7 @@
         <style>
             #edit {
                 position: absolute;
-                top: 10px;
+                margin-top: 10px;
                 right: 10px;
             }
             body {
