Definidas las alertas para todos los controladores

--- a/resources/views/admin.twig
+++ b/resources/views/admin.twig
@@ -2,7 +2,7 @@
 {% block head %}
     <style>
         #edit:hover {
-            color: blue;
+            color: #007bff;
         }
         h2 {
             margin-top: 20px;
