Arreglo de rutas

--- a/resources/views/index.twig
+++ b/resources/views/index.twig
@@ -42,7 +42,7 @@
     </style>
 {% endblock %}
 {% block content %}
-    <a class="btn btn-outline-dark" href="/curriculum/admin" id="edit">Edit</a>
+    <a class="btn btn-outline-dark" href="/admin" id="edit">Edit</a>
     <div class="container">
         <div class="row" id="resume-header">
             <div class="col-3">
